@@ -1,5 +1,10 @@
 2007-11-21  Brian Warner  <warner@lothar.com>
 
+	* buildbot/master.py (BuildMaster.loadConfig): builder names that
+	begin with an underscore are now reserved, so prohibit them from
+	appearing in the config file.
+	* NEWS: announce this change.
+
 	* buildbot/status/web/base.py: add buttons (to one_line_per_build
 	and one_box_per_builder) to force/stop builds on all Builders at
 	once.
